@startuml
abstract class AbstractSemanticTokenProvider {
{abstract} # highlightElement(node: AstNode, acceptor: SemanticTokenAcceptor)
}

class ContextMapperDslSemanticTokenProvider {
# highlightElement(node: AstNode, acceptor: SemanticTokenAcceptor)
}

class SemanticTokenProviderRegistry {
- semanticTokenProviders: Map<string, ContextMapperSemanticTokenProvider<AstNode>>
+ get(node: AstNode): ContextMapperSemanticTokenProvider<AstNode> | undefined
}

interface ContextMapperSemanticTokenProvider {
+ highlight(node: T, acceptor: SemanticTokenAcceptor)
}

AbstractSemanticTokenProvider <|-- ContextMapperDslSemanticTokenProvider
ContextMapperDslSemanticTokenProvider --> SemanticTokenProviderRegistry
SemanticTokenProviderRegistry o-- "0..*" ContextMapperSemanticTokenProvider
@enduml